--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Dapplets Team",
   "description": "The tooling for deployment of dapplet modules to registries.",
   "bin": {
-    "dapplet-cli": "./bin/dapplet-cli"
+    "dapplet": "./bin/dapplet-cli"
   },
   "main": "./lib/dapplet-cli.js",
   "scripts": {},
@@ -26,8 +26,12 @@
   "devDependencies": {},
   "dependencies": {
     "commander": "^2.20.0",
+    "ejs": "^3.0.1",
     "form-data": "^2.5.0",
+    "inquirer": "^7.0.4",
     "node-fetch": "^2.6.0",
-    "stream-to-array": "^2.3.0"
+    "shelljs": "^0.8.3",
+    "stream-to-array": "^2.3.0",
+    "yargs": "^15.1.0"
   }
 }
